<resources>
    <string name="app_name">Our Shopping List</string>
    <string name="firsttime_activity_edittext">Enter your name</string>
    <string name="button_register">Don\'t have account yet? Sign up</string>
    <string name="button_sign_in">SIGN IN</string>
    <string name="textView_password">Password</string>
    <string name="textView_email" translatable="false">Email</string>
    <string name="textView_email_register_activity" translatable="false">Email</string>
    <string name="textView_Username_register_Activity">Username</string>
    <string name="textView_password_register_Activity">Password</string>
    <string name="textView_repeat_password_register_activity">Repeat password</string>
    <string name="button_register_register_activity">Register</string>
    <string name="username_hint">Username</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="alert_textView">New shopping list</string>
    <string name="alert_list_name">List name</string>
    <string name="our_lists">Our Lists:</string>
    <string name="button_to_add_list">Button to add list</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_remove">Remove</string>
    <string name="items_to_buy">Items to buy:</string>
    <string name="add_item">Add item</string>
    <string name="add_new_item">Add new item..</string>
    <string name="add_items">Add new items..</string>
    <string name="item">item</string>
    <string name="toast_when_item_clicked_planned_tab">Item bought, now it\'s in the bought tab</string>
    <string name="toast_when_item_clicked_bought_tab">Item returned to planned tab</string>
    <string name="Title">Our Shopping List</string>
    <string name="logginginprogress">Logging in progress</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="products">Products</string>
    <string name="dialog_in_bought_items">Do you want to delete all bought items?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="add_user">Add user</string>
    <string name="TextViewChangingListNameAlert">Choose new name</string>
    <string name="bought">Bought</string>
    <string name="planned">Planned</string>
    <string name="share">Share</string>
    <string name="facebook_app_id" translatable="false">446453899587830</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb446453899587830</string>
    <string name="have_account_already_login">Have account already? Login</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="share_your_list_alert_dialog">Share your list</string>
    <string name="add">add</string>
    <string name="firend_email">Friend\'s email</string>
    <string name="share_with_your_friend">Share with your friend</string>
    <string name="friend_email">Friend email</string>
    <string name="share_with_friend">Share with friend</string>
    <string name="activity_list_top_bar_tittle">Your Lists</string>
    <string name="toast_message_dialog_share_list_invitation_send">Invitation sent, invite another friend or close :)</string>
    <string name="dialog_share_list_toast_when_no_such_email_in_database">We don\'t know this friend, please check this email again :)</string>
    <string name="dialog_share_list_toast_when_email_like_user_email">It\'s your email genius! :)</string>
    <string name="toast_sth_went_wrong">Sorry check your connection and try again</string>
    <string name="push_notification_to_your_friends">Push notification to your friends</string>
    <string name="write_your_message_or_choose">Write your message or choose</string>
    <string name="send">Send</string>
    <string name="add_your_display_name">Add your display name</string>
    <string name="display_name">Display Name</string>
    <string name="welcome">Welcome</string>
    <string-array name="notifications">
        <item>"I'm in shop, you want sth?"</item>
        <item>"I'm going shopping"</item>
        <item>"Going for some snacks"</item>
    </string-array>


</resources>
